--- a/linkbook/links/templates/links/view_books.html
+++ b/linkbook/links/templates/links/view_books.html
@@ -19,7 +19,7 @@
                   <div class="card-stacked">
                       <div class="card-title center"><h4>{{ book.title }}</h4></div>
                       <div class="card-content">
-                      <p>{{ book.description }}</p>
+                      <p class="truncate">{{ book.description }}</p>
                       <p>{{book.link_set.count}} link(s)</p>
                     </div>
                   </div>
