--- a/linkbook/templates/base.html
+++ b/linkbook/templates/base.html
@@ -5,38 +5,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- This will help in zooming in mobile-->
-	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<!--Import materialize.css-->
-	<link type="text/css" rel="stylesheet" href="/static/materialize/css/materialize.css"  media="screen,projection"/>
-	<title>
-		{% block title %}{% endblock %}
-	</title>
-    <script src = "/static/materialize/js/jquery.js"></script>
-    <script src = '/static/materialize/js/materialize.js'> </script>
-    <link type="text/css" rel="stylesheet" href="/static/materialize/css/basic.css"  media="screen,projection"/>
-	<!-- <link type="text/css" rel="stylesheet" href="/static/materialize/css/Color_theme.css" media="screen,projection"> -->
-    {% block head %}
-	{% endblock %}
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="/static/materialize/css/materialize.css"  media="screen,projection"/>
+    <title>
+      {% block title %}{% endblock %}
+  </title>
+  <script src = "/static/materialize/js/jquery.js"></script>
+  <script src = '/static/materialize/js/materialize.js'> </script>
+  <link type="text/css" rel="stylesheet" href="/static/materialize/css/basic.css"  media="screen,projection"/>
+  <!-- <link type="text/css" rel="stylesheet" href="/static/materialize/css/Color_theme.css" media="screen,projection"> -->
+  {% block head %}
+  {% endblock %}
 </head>
 <body>
-<style>
+    <style>
 
-    #userProfilePicNavbar
-    {
-        margin: 25%;
-        cursor:pointer;
-    }
-
-    @-moz-document url-prefix()
-    {
         #userProfilePicNavbar
         {
-            margin-top: 15%;
+            margin: 25%;
+            cursor:pointer;
         }
-    }
+
+        @-moz-document url-prefix()
+        {
+            #userProfilePicNavbar
+            {
+                margin-top: 15%;
+            }
+        }
 
 
-</style>
+    </style>
     <nav class=" white-text" style="background-color: #26a69a">
         <div class="nav-wrapper">
             <a href="#" class="center brand-logo" >LINK BOOK</a>
@@ -52,124 +52,203 @@
 
 
                 {% if not request.user.is_authenticated %}
-                    <li ><a href="/signup" class="right">Sign Up</a></li>
+                <li><a class="right" href="#modal1">Login</a></li>
+                <li ><a href="/signup" class="right">Sign Up</a></li>
                 {% else %}
-                    <li><a class="btn-floating  waves-effect waves-light green" href="#modal2" title="Create new book" ><i class="material-icons">queue</i></a></li>
-                    <li><a class="btn-floating waves-effect waves-light green" href="#modal3" title="Create new link" ><i class="material-icons">note_add</i></a>
-                    </li>
-                    <li>
-                     <img class="responsive-img circle hoverable"  height = "40px" width="40px"   src="{{request.user.profile.pic}}" id="userProfilePicNavbar">
-                    </li>
-                    <li><a href="/logout">Logout</a></li>
-                {% endif %}
+                <li><a class="btn-floating  waves-effect waves-light green" href="#modal2" title="Create new book" ><i class="material-icons">queue</i></a></li>
+                <li><a class="btn-floating waves-effect waves-light green" href="#modal3" title="Create new link" ><i class="material-icons">note_add</i></a>
+                </li>
+                <li>
+                   <img class="responsive-img circle hoverable"  height = "40px" width="40px"   src="{{request.user.profile.pic}}" id="userProfilePicNavbar">
+               </li>
+               <li><a href="/logout">Logout</a></li>
+               {% endif %}
 
-            </ul>
-            <ul class="side-nav" id="mobile-demo">
-                <li class="active "><a href="/">Home</a></li>
-                <li><a href="#">About Us </a></li>
-                <li><a  href="#">Project</a></li>
-                {%  if not request.user.is_authenticated %}
-                <li><a href="signup" > Sign Up</a></li>
-                {% else %}
-                    <li><a href="/profile" >Profile</a></li>
-                <li><a href="/logout">Logout</a></li>
-                {% endif %}
-            </ul>
-        </div>
-    </nav>
+           </ul>
+           <ul class="side-nav" id="mobile-demo">
+            <li class="active "><a href="/">Home</a></li>
+            <li><a href="#">About Us </a></li>
+            <li><a  href="#">Project</a></li>
+            {%  if not request.user.is_authenticated %}
+            <li><a href="#modal1">Login</a></li>
+            <li><a href="signup" > Sign Up</a></li>
+            {% else %}
+            <li><a href="/profile" >Profile</a></li>
+            <li><a href="/logout">Logout</a></li>
+            {% endif %}
+        </ul>
+    </div>
+</nav>
 
-    <div id="modal2" class="modal">
+<!-- LOGIN modal -->
+<div id="modal1" class="modal">
+    <div class="modal-content">
 
-        <div class="modal-content">
-            <h4 class="center">Create your own book</h4>
-                <form method="post" action="{% url 'create_book' %}" role="form">
-                {% csrf_token %}
-                    <div class="input-field">
-                        <i class="material-icons prefix">title</i>
-                        <input class="input" type="text" id="TITLE" name="TITLE" maxlength="30" data-length="30">
-                        <label for="TITLE">Title</label>
+        <div class="container">
+            <div class="row">
+                <div class="col s12 m2 l2"></div>
+                <div class="col s12 m8 l8">
+                    <h5 class="center center-align blue-grey-text">LinkBook</h5>
+                </div>
+                <div class="col s12 m2 l2"></div>
+            </div>
+            <div class="row">
+
+                <div class="col s12 m4 l4">
+                    <div>
+                        <a href="{% url 'social:begin' 'github' %}"><button class="btn black lighten-3 white-text btn-block "><span class="fa fa-github" style="text-transform: lowercase"> | continue with GitHub</span></button></a>
                     </div>
-                    <div class="input-field">
-                        <div class="input-field">
-                            <i class="material-icons prefix">description</i>
-                            <textarea class="materialize-textarea" type="text" id="DESCRIPTION" name="DESCRIPTION" maxlength="255" data-length="255"></textarea>
-                                        <label for="DESCRIPTION">Description</label>
-                        </div>
-                        </div>
+                    <br>
+                    <div>
+                        <a href="{% url 'social:begin' 'twitter' %}"><button class="btn btn-info blue white-text btn-block"><span class="fa fa-twitter" style="text-transform: lowercase"> | continue with Twitter</span></button> </a>
+                    </div>
+                    <br>
+                    <div>
+                      <a href="{% url 'social:begin' 'facebook' %}"><button class="btn btn-primary btn-block"><span class="fa fa-facebook" style="text-transform: lowercase"> | continue with Facebook</span></button></a></div>
+                      <br>
+                      <div>
+                        <a href="{% url 'social:begin' 'google-oauth2' %}"> <button class="browser-default btn btn-danger btn-block"><span class="fa fa-google-plus" style="text-transform: lowercase"> | continue with google</span> </button> </a>
+                    </div>
+                    <br>
+                    <div>
+                        <a href = "/signup" class="center center-align"><button class="btn btn-default btn-block"><span class="fa fa-user" style="text-transform: lowercase"> | Sign Up locally</span></button></a>
+                    </div>
+                </div>
+                <div class="col s12 m1 l1 hide-on-small-and-down" style="border-left: 1px solid black">
+                    <br><br><br><br><br><br><br><br><br><br><br><br><br>
+                </div>
+                <div class="col s12 m7 l7">
 
-                    <button type="submit" class="btn btn-default">{% trans 'Save' %}</button>
-                    <br><br>
-                </form>
+                    <form method="post" action="{% url 'login' %}" role="form">
+                        {% csrf_token %}
+                        <div class="input-field{% if form.username.errors %} has-error{% endif %}">
+                          <label for="username" class="active">{% trans 'Username' %}</label>
+                          <input type="text" class="form-control" id="username" name="username">
+
+                          {% for error in form.username.errors %}
+                          <span class="red-text">{{ error }}</span><br>
+                          {% endfor %}
+                      </div>
+                      <div class="input-field{% if form.password.errors %} has-error{% endif %}">
+                          <label for="password" class="active">{% trans 'Password' %}</label>
+                          <input type="password"  id="password" name="password">
+                          {% for error in form.password.errors %}
+                          <span class="red-text">{{ error }}</span><br>
+                          {% endfor %}
+                      </div>
+                      <button type="submit" class="btn waves-effect waves-light">{% trans 'Log in' %}</button>
+                      <br><br><br>
+                  </form>
+
+              </div>
+          </div>
+          <div class="row">
+            <div class="col s12 m4 l4"></div>
+            <div class="col s12 m4 l4 center center-align">
+
+            </div>
+            <div class="col s12 m4 l4"></div>
         </div>
     </div>
 
-    <div id="modal3" class="modal">
-        <div class="modal-content">
-            <h4 class="center">Create your link</h4>
-                <form method="post" action="{% url 'create_link' %}" role="form">
-                {% csrf_token %}
-                <div class="row">
-                    <div class="col s12 m6 l6">
-                        <div class="input-field ">
-                            <i class="material-icons prefix">open_in_browser</i>
-                            <input type="url" class="input validate" name="URL" id="URL" autocomplete="autocomplete" required>
-                            <label for="URL" class="active" data-error="Invalid URL, Example(Valid URL) : https://www.google.co.in." data-success="">URL</label>
-                        </div>
-                    </div>
-                    <div class="col s12 m6 l6">
-                        <div class="input-field ">
-                            <i class="material-icons prefix">title</i>
-                            <input type="text" class="input" name="TITLE" id="TITLE" autocomplete="autocomplete" required maxlength="30" data-length="30">
-                            <label for="TITLE" class="active">Title</label>
-                        </div>
+</div>
+</div>
+
+
+<!-- NEW BOOK modal -->
+<div id="modal2" class="modal">
+
+    <div class="modal-content">
+        <h4 class="center">Create your own book</h4>
+        <form method="post" action="{% url 'create_book' %}" role="form">
+            {% csrf_token %}
+            <div class="input-field">
+                <i class="material-icons prefix">title</i>
+                <input class="input" type="text" id="TITLE" name="TITLE" maxlength="30" data-length="30">
+                <label for="TITLE">Title</label>
+            </div>
+            <div class="input-field">
+                <div class="input-field">
+                    <i class="material-icons prefix">description</i>
+                    <textarea class="materialize-textarea" type="text" id="DESCRIPTION" name="DESCRIPTION" maxlength="255" data-length="255"></textarea>
+                    <label for="DESCRIPTION">Description</label>
+                </div>
+            </div>
+
+            <button type="submit" class="btn btn-default">{% trans 'Save' %}</button>
+            <br><br>
+        </form>
+    </div>
+</div>
+
+<!-- NEW LINK MODAL -->
+<div id="modal3" class="modal">
+    <div class="modal-content">
+        <h4 class="center">Create your link</h4>
+        <form method="post" action="{% url 'create_link' %}" role="form">
+            {% csrf_token %}
+            <div class="row">
+                <div class="col s12 m6 l6">
+                    <div class="input-field ">
+                        <i class="material-icons prefix">open_in_browser</i>
+                        <input type="url" class="input validate" name="URL" id="URL" autocomplete="autocomplete" required>
+                        <label for="URL" class="active" data-error="Invalid URL, Example(Valid URL) : https://www.google.co.in." data-success="">URL</label>
                     </div>
                 </div>
-                    <div class="row">
-                    <div class="col s12 m6 l6">
-                        <div class="input-field ">
+                <div class="col s12 m6 l6">
+                    <div class="input-field ">
+                        <i class="material-icons prefix">title</i>
+                        <input type="text" class="input" name="TITLE" id="TITLE" autocomplete="autocomplete" required maxlength="30" data-length="30">
+                        <label for="TITLE" class="active">Title</label>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12 m6 l6">
+                    <div class="input-field ">
                         <i class="material-icons prefix">assignment</i>
                         <input type="text" class="input" name="TAGS" id="TAGS" >
                         <label for="TAGS" class="active">Tags</label>
-                        </div>
                     </div>
-                    <div class="col s12 m6 l6">
-                         <div class="input-field ">
-                        <i class="material-icons prefix">book</i>
-                        <select multiple title="Choose the books in which the current link has to be saved" name="BOOKS" id="BOOKS">
+                </div>
+                <div class="col s12 m6 l6">
+                   <div class="input-field ">
+                    <i class="material-icons prefix">book</i>
+                    <select multiple title="Choose the books in which the current link has to be saved" name="BOOKS" id="BOOKS">
                         <label class="active" for="BOOKS">BOOKS</label>
-                            <option selected disabled>Choose Books here</option>
-                        </select>
-                    </div>
-                    </div>
+                        <option selected disabled>Choose Books here</option>
+                    </select>
                 </div>
-                    <div class="row">
-                    <div class=" col s12 m12 l12">
-                        <div class="input-field">
-                        <i class="material-icons prefix">description</i>
-                        <textarea class="input materialize-textarea" name="DESCRIPTION" id="DESCRIPTION" maxlength="1000" data-length="1000"></textarea>
-                        <label for="DESCRIPTION" class="active">Description</label>
-                    </div>
-                    </div>
-                </div>
-                    <button type="submit" class="btn">{% trans 'Save' %}</button>
-                </form>
+            </div>
         </div>
-    </div>
+        <div class="row">
+            <div class=" col s12 m12 l12">
+                <div class="input-field">
+                    <i class="material-icons prefix">description</i>
+                    <textarea class="input materialize-textarea" name="DESCRIPTION" id="DESCRIPTION" maxlength="1000" data-length="1000"></textarea>
+                    <label for="DESCRIPTION" class="active">Description</label>
+                </div>
+            </div>
+        </div>
+        <button type="submit" class="btn">{% trans 'Save' %}</button>
+    </form>
+</div>
+</div>
 
 
-	{% block body %}
+{% block body %}
 
-    {% endblock body %}
-    
-    <script>
+{% endblock body %}
+
+<script>
 
     <!-- CSRF handling -->
     function getCookie(name) {
-          var cookieValue = null;
-          if (document.cookie && document.cookie != '') {
-              var cookies = document.cookie.split(';');
-              for (var i = 0; i < cookies.length; i++) {
-                  var cookie = jQuery.trim(cookies[i]);
+      var cookieValue = null;
+      if (document.cookie && document.cookie != '') {
+          var cookies = document.cookie.split(';');
+          for (var i = 0; i < cookies.length; i++) {
+              var cookie = jQuery.trim(cookies[i]);
                   // Does this cookie string begin with the name we want?
                   if (cookie.substring(0, name.length + 1) == (name + '=')) {
                       cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
@@ -193,37 +272,45 @@
       });
 
 
-
-        {% if request.user.is_authenticated %}
+      {% if request.user.is_authenticated %}
+        // function to load user books when page is loaded
         $(document).ready(function(){
             //initialize
             var books = $("#BOOKS");
 
             $.ajax({ url: '/navbar/',
-                     type: 'post',
-                     success : function(data, status){
-                            console.log(data);
-                            for(var i = 0; i<data['books'].length;i++){
-                                books.append('<option>' + data['books'][i] + '</option>');
-                            }
+               type: 'post',
+               success : function(data, status){
+                console.log(data);
+                for(var i = 0; i<data['books'].length;i++){
+                    books.append('<option>' + data['books'][i] + '</option>');
+                }
 
                             // bind new options
                             books.material_select();
                         },
                     });
-            });
+        });
         {% endif %}
 
-
+        // function to load user profile on click 
         $(function () {
             $(".button-collapse").sideNav();
             $('select').material_select();
-        $('#userProfilePicNavbar').click(function () {
-            var url = "/" + "{{ request.user.username }}";
-            window.location.href = url;
+            $('#userProfilePicNavbar').click(function () {
+                var url = "/" + "{{ request.user.username }}";
+                window.location.href = url;
+            });
+            $('.modal').modal();
         });
-        $('.modal').modal();
-        });
-    </script>
+
+        // function to auto-resize descrption field
+        $(function () {
+           $('#DESCRIPTION').trigger('autoresize');
+           $('.chips').material_chip();
+
+           $('#TITLE, #DESCRIPTION').characterCounter();
+       });
+   </script>
 </body>
 </html>
